[tool.poetry]
name = "examineproject"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
pytest = "^7.2.2"

[tool.pytest.ini_options]
addopts = "-s"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
